--- a/login.html
+++ b/login.html
@@ -2,99 +2,256 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>CreBiz Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>CreBiz YouTube Analytics Tool - Login</title>
+
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Noto Sans KR,Arial;margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;background:#0b1220;color:#e5e7eb}
-    .card{width:min(420px,92vw);background:#111827;border:1px solid #1f2937;border-radius:18px;padding:22px;box-shadow:0 20px 50px rgba(0,0,0,.35)}
-    h1{font-size:18px;margin:0 0 10px}
-    .desc{font-size:13px;opacity:.8;margin:0 0 18px;line-height:1.5}
-    label{display:block;font-size:13px;margin:12px 0 6px;opacity:.9}
-    input{width:100%;box-sizing:border-box;padding:11px 12px;border-radius:10px;border:1px solid #334155;background:#0b1220;color:#e5e7eb;outline:none}
-    input:focus{border-color:#60a5fa}
-    button{width:100%;margin-top:14px;padding:11px 12px;border-radius:999px;border:0;background:#2563eb;color:white;font-weight:700;cursor:pointer}
-    button:disabled{opacity:.6;cursor:not-allowed}
-    .err{margin-top:10px;color:#f87171;font-size:13px;min-height:18px}
+    :root{
+      --bg1:#f6f7fb;
+      --bg2:#eef1f9;
+      --card:#ffffff;
+      --text:#111827;
+      --muted:#6b7280;
+      --line:#e5e7eb;
+      --btn:#4f63ff;
+      --btnHover:#4356f0;
+      --shadow: 0 22px 70px rgba(15, 23, 42, 0.18);
+      --radius: 22px;
+    }
+    *{box-sizing:border-box;}
+    html,body{height:100%;}
+    body{
+      margin:0;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Apple SD Gothic Neo","Noto Sans KR","Malgun Gothic", Arial, sans-serif;
+      color:var(--text);
+      background:
+        radial-gradient(1200px 600px at 50% 35%, rgba(79, 99, 255, 0.20), transparent 60%),
+        linear-gradient(180deg, var(--bg1), var(--bg2));
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:24px;
+    }
+    .wrap{
+      width:min(520px, 100%);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+    }
+    .card{
+      width:100%;
+      background:var(--card);
+      border-radius:var(--radius);
+      box-shadow: var(--shadow);
+      border: 1px solid rgba(229,231,235,0.9);
+      padding:34px 34px 26px;
+    }
+    .title{
+      font-size:22px;
+      font-weight:800;
+      letter-spacing:-0.2px;
+      text-align:center;
+      margin:0 0 6px;
+    }
+    .subtitle{
+      text-align:center;
+      color:var(--muted);
+      font-size:13.5px;
+      line-height:1.35;
+      margin:0 0 22px;
+    }
+    .form{
+      display:flex;
+      flex-direction:column;
+      gap:14px;
+      margin-top:8px;
+    }
+    label{
+      display:block;
+      font-size:13px;
+      font-weight:700;
+      color:#374151;
+      margin:0 0 8px;
+    }
+    .input{
+      width:100%;
+      height:44px;
+      border-radius:12px;
+      border:1px solid var(--line);
+      outline:none;
+      padding:0 14px;
+      font-size:14px;
+      transition: box-shadow .15s ease, border-color .15s ease;
+      background:#fff;
+    }
+    .input:focus{
+      border-color: rgba(79,99,255,0.65);
+      box-shadow: 0 0 0 4px rgba(79,99,255,0.12);
+    }
+    .btn{
+      margin-top:8px;
+      height:48px;
+      border:none;
+      border-radius:999px;
+      background:var(--btn);
+      color:white;
+      font-size:15px;
+      font-weight:800;
+      cursor:pointer;
+      box-shadow: 0 14px 30px rgba(79,99,255,0.28);
+      transition: transform .06s ease, background .15s ease;
+    }
+    .btn:hover{ background:var(--btnHover); }
+    .btn:active{ transform: translateY(1px); }
+    .btn:disabled{
+      opacity:.7;
+      cursor:not-allowed;
+      box-shadow:none;
+    }
+    .msg{
+      margin-top:12px;
+      font-size:13px;
+      text-align:center;
+      min-height:18px;
+    }
+    .msg.error{ color:#dc2626; font-weight:700; }
+    .msg.ok{ color:#16a34a; font-weight:700; }
+    .foot{
+      margin-top:18px;
+      text-align:center;
+      color:var(--muted);
+      font-size:12.5px;
+      line-height:1.35;
+    }
+    .lock{
+      display:inline-flex;
+      gap:6px;
+      align-items:center;
+      justify-content:center;
+      margin-top:10px;
+      color:var(--muted);
+      font-size:12.5px;
+    }
+    .copyright{
+      margin-top:10px;
+      text-align:center;
+      color:#9ca3af;
+      font-size:12px;
+    }
+    .row{
+      display:flex;
+      flex-direction:column;
+    }
+    @media (max-width: 420px){
+      .card{ padding:26px 20px 20px; border-radius:18px; }
+      .title{ font-size:20px; }
+    }
   </style>
 </head>
+
 <body>
-  <div class="card">
-    <h1>CreBiz YouTube Analytics Tool</h1>
-    <p class="desc">아이디/비밀번호를 입력해주세요. (계정 정보는 이 페이지에 저장되지 않습니다)</p>
+  <div class="wrap">
+    <div class="card">
+      <h1 class="title">CreBiz YouTube Analytics Tool</h1>
+      <p class="subtitle">결제 완료 후 안내받은<br/>아이디 / 비밀번호를 입력해주세요.</p>
 
-    <form id="form">
-      <label for="id">아이디</label>
-      <input id="id" autocomplete="username" />
+      <form class="form" id="loginForm" autocomplete="off">
+        <div class="row">
+          <label for="id">아이디</label>
+          <input class="input" id="id" name="id" type="text" inputmode="text" autocomplete="username" required />
+        </div>
 
-      <label for="pw">비밀번호</label>
-      <input id="pw" type="password" autocomplete="current-password" />
+        <div class="row">
+          <label for="pw">비밀번호</label>
+          <input class="input" id="pw" name="pw" type="password" autocomplete="current-password" required />
+        </div>
 
-      <button id="btn" type="submit">로그인</button>
-      <div class="err" id="err"></div>
-    </form>
+        <button class="btn" id="submitBtn" type="submit">로그인</button>
+
+        <div class="msg" id="msg"></div>
+      </form>
+
+      <div class="lock">🔒 이 페이지의 계정 정보는 유료 회원 전용입니다. 외부 공유를 삼가 주세요.</div>
+      <div class="copyright">© DreamShare Inc. All rights reserved.</div>
+    </div>
   </div>
 
   <script>
-    // ✅ login.html 들어오면 혹시 남아있던 쿠키 세션을 정리(선택)
-    // (원하면 주석 해제)
-    // fetch("/.netlify/functions/logout", { method: "POST", credentials: "include" });
+    // ✅ 보안 포인트:
+    // - 프론트에는 계정(USERS_JSON) 정보가 "절대" 들어있지 않습니다.
+    // - 로그인 검증은 Netlify Function(/.netlify/functions/login)에서만 수행합니다.
+    // - 성공 시 서버가 Set-Cookie로 세션(jwt)을 내려주고, 이후 tool.html 접근이 허용됩니다.
 
-    const form = document.getElementById("form");
-    const btn = document.getElementById("btn");
-    const err = document.getElementById("err");
+    const form = document.getElementById("loginForm");
+    const msgEl = document.getElementById("msg");
+    const btn = document.getElementById("submitBtn");
 
-    function setError(msg) { err.textContent = msg || ""; }
-    function setLoading(on) {
-      btn.disabled = !!on;
-      btn.textContent = on ? "로그인 중..." : "로그인";
+    function setMsg(text, type) {
+      msgEl.textContent = text || "";
+      msgEl.className = "msg" + (type ? " " + type : "");
     }
+
+    function getRedirectTo() {
+      // tool.html 접근하다 튕겼을 때 redirect 파라미터가 있으면 거기로,
+      // 없으면 기본은 tool.html
+      const url = new URL(location.href);
+      const r = url.searchParams.get("redirect");
+      if (!r) return "/tool.html";
+      // 외부 도메인으로 튀는 공격 방지: 같은 origin 내 경로만 허용
+      if (r.startsWith("http://") || r.startsWith("https://")) return "/tool.html";
+      if (!r.startsWith("/")) return "/tool.html";
+      return r;
+    }
+
+    // 이미 로그인되어 있으면 바로 이동(UX)
+    (async function autoSkipIfLoggedIn(){
+      try{
+        const res = await fetch("/.netlify/functions/me", { credentials: "include" });
+        const data = await res.json();
+        if (data && data.loggedIn) {
+          location.replace(getRedirectTo());
+        }
+      }catch(e){ /* 조용히 무시 */ }
+    })();
 
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
-      setError("");
+      setMsg("");
 
-      const id = (document.getElementById("id").value || "").trim();
-      const pw = (document.getElementById("pw").value || "").trim();
+      const id = document.getElementById("id").value.trim();
+      const pw = document.getElementById("pw").value;
 
       if (!id || !pw) {
-        setError("아이디/비밀번호를 입력해주세요.");
+        setMsg("아이디/비밀번호를 입력해주세요.", "error");
         return;
       }
 
-      setLoading(true);
+      btn.disabled = true;
+      setMsg("로그인 확인 중...", "");
 
       try {
         const res = await fetch("/.netlify/functions/login", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           credentials: "include",
-          body: JSON.stringify({ id, pw })
+          body: JSON.stringify({ id, password: pw })
         });
 
-        // ✅ 우리 login.js는 성공 시 {ok:true} JSON
-        // 실패 시에는 텍스트일 수도 있어서 안전하게 처리
-        let data = null;
-        const text = await res.text();
-        try { data = JSON.parse(text); } catch { data = null; }
+        const data = await res.json().catch(() => ({}));
 
         if (!res.ok) {
-          setError(data?.message || text || "로그인 실패");
-          setLoading(false);
+          // 서버가 구체 사유를 주더라도 프론트에서는 안전하게 표준 메시지만 노출
+          setMsg("Invalid credentials", "error");
+          btn.disabled = false;
           return;
         }
 
-        if (!data || data.ok !== true) {
-          setError("로그인 실패");
-          setLoading(false);
-          return;
-        }
-
-        // ✅ 성공: 서버가 HttpOnly 세션 쿠키를 심어줌
-        location.replace("/tool.html");
-      } catch (e2) {
-        setError("네트워크 오류. 잠시 후 다시 시도해주세요.");
-      } finally {
-        setLoading(false);
+        setMsg("로그인 성공! 이동 중...", "ok");
+        // 쿠키가 저장되도록 약간의 틱을 두고 이동
+        setTimeout(() => location.replace(getRedirectTo()), 150);
+      } catch (err) {
+        setMsg("네트워크 오류입니다. 잠시 후 다시 시도해주세요.", "error");
+        btn.disabled = false;
       }
     });
   </script>
